--- a/Assignment3-text-analysis.ipynb
+++ b/Assignment3-text-analysis.ipynb
@@ -839,9 +839,9 @@
     "                \"model__min_samples_split\": [2, 5, 10]\n",
     "                }\n",
     "            elif model_title == 'NaiveBayes':\n",
-    "                param_grid = {\"model__alpha\": [0.1, 0.01, 0.001]}  # You can add hyperparameters if applicable\n",
+    "                param_grid = {\"model__alpha\": [0.1, 0.01, 0.001]}\n",
     "            elif model_title == 'GNB':\n",
-    "                param_grid = {\"model__var_smoothing\": [1e-9, 1e-10, 1e-11]}  # You can add hyperparameters if applicable\n",
+    "                param_grid = {\"model__var_smoothing\": [1e-9, 1e-10, 1e-11]}\n",
     "            \n",
     "            grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring='f1_macro')\n",
     "            grid_search.fit(X_features, y_train)\n",
