--- a/Assignment3-text-analysis.ipynb
+++ b/Assignment3-text-analysis.ipynb
@@ -1248,7 +1248,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "EDA</br>\n",
+    "Results visualization using pie chart "
+   ]
   },
   {
    "cell_type": "code",
