--- a/Assignment3-text-analysis.ipynb
+++ b/Assignment3-text-analysis.ipynb
@@ -180,8 +180,8 @@
     "# word net installation:\n",
     "\n",
     "# unmark if you want to use and need to install\n",
-    "!python3.11 -m pip install wn\n",
-    "!python3.11 -m -m wn download omw-he:1.4"
+    "!pip install wn\n",
+    "!python -m wn download omw-he:1.4"
    ]
   },
   {
@@ -231,7 +231,7 @@
     "# Hebrew tokenizer installation:\n",
     "\n",
     "# unmark if you want to use and need to install:\n",
-    "!python3.11 -m pip install hebrew_tokenizer"
+    "!pip install hebrew_tokenizer"
    ]
   },
   {
