--- a/Assignment3-text-analysis.ipynb
+++ b/Assignment3-text-analysis.ipynb
@@ -470,7 +470,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function format_data removes whitespaces and digits from the text"
+    "**Important** - We know decision tree algorithem dont need scaling while train it , but it stills improves our score so we kept it .
+       The function format_data removes whitespaces and digits from the text"
    ]
   },
   {
